[package]
name = "rustdb-axum-example"
version = "0.1.32"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Axum rustdb example"
repository = "https://github.com/georgebarwood/RustDB/tree/main/examples"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.0", default-features = false, features = ["multipart","http1"] }
#hyper = { version = "0.14.14", features = ["server"] }
tokio = { version = "1.13.0", features = ["macros","rt-multi-thread","parking_lot"] }
tower = { version = "0.4.10" }
#headers = "0.3.5"
tower-cookies = "0.4.0"
argon2rs = "0.2.5"
serde = { version = "1.0.142", features = ["derive","rc"] }
#serde_json = "1.0.83"
rmp-serde = "1.1.0"

reqwest = "0.11.11"

#rustdb = { path = "../rustdb" } 
rustdb = { version = "1.5.3" }
mimalloc = { version = "0.1.26", default-features = false }
lettre = { version = "0.10.1" }
flate3 = "0.1.21"
#console-subscriber = { path = "../console-main/console-subscriber" }
#axum-debug = "0.2.0"

